@@ -1,12 +1,22 @@
 package by.forward.forward_system.core.services.core;
 
+import by.forward.forward_system.core.dto.messenger.v3.ChatCreationDto;
+import by.forward.forward_system.core.dto.messenger.v3.ChatMetadataDto;
+import by.forward.forward_system.core.dto.messenger.v3.ChatTagDto;
+import by.forward.forward_system.core.dto.messenger.v3.ChatTagMetadataDto;
 import by.forward.forward_system.core.enums.ChatType;
+import by.forward.forward_system.core.enums.TagCssColor;
+import by.forward.forward_system.core.enums.TagType;
 import by.forward.forward_system.core.enums.auth.Authority;
-import by.forward.forward_system.core.jpa.model.*;
-import by.forward.forward_system.core.jpa.repository.*;
+import by.forward.forward_system.core.jpa.model.AuthorDisciplineEntity;
+import by.forward.forward_system.core.jpa.model.AuthorEntity;
+import by.forward.forward_system.core.jpa.model.ChatTypeEntity;
+import by.forward.forward_system.core.jpa.model.UserEntity;
+import by.forward.forward_system.core.jpa.repository.AuthorDisciplineRepository;
+import by.forward.forward_system.core.jpa.repository.AuthorRepository;
+import by.forward.forward_system.core.jpa.repository.ChatTypeRepository;
 import by.forward.forward_system.core.jpa.repository.projections.AuthorWithDisciplineProjection;
-import by.forward.forward_system.core.services.messager.ChatMemberService;
-import by.forward.forward_system.core.services.messager.ChatService;
+import by.forward.forward_system.core.services.messager.ChatCreatorService;
 import by.forward.forward_system.core.utils.ChatNames;
 import lombok.AllArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
@@ -14,7 +24,10 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -26,17 +39,13 @@ public class AuthorService {
 
     private final PasswordEncoder passwordEncoder;
 
-    private final ChatService chatService;
-
-    private final ChatMemberService chatMemberService;
-
     private final ChatTypeRepository chatTypeRepository;
 
     private final AuthorDisciplineRepository authorDisciplineRepository;
 
-    private final ChatMetadataRepository chatMetadataRepository;
-
     private final ChatUtilsService chatUtilsService;
+
+    private final ChatCreatorService chatCreatorService;
 
     public Optional<AuthorEntity> getById(Long id) {
         return authorRepository.findById(id);
@@ -51,62 +60,56 @@ public class AuthorService {
         ChatTypeEntity requestOrderChat = chatTypeRepository.findById(ChatType.REQUEST_ORDER_CHAT.getName()).orElseThrow(() -> new RuntimeException("Chat type not found"));
         ChatTypeEntity adminTalkChat = chatTypeRepository.findById(ChatType.ADMIN_TALK_CHAT.getName()).orElseThrow(() -> new RuntimeException("Chat type not found"));
 
-        ChatEntity adminChat = addChatToUser(
-            Collections.singletonList(authorUser),
-            ChatNames.ADMINISTRATION_CHAT_NAME.formatted(author.getUser().getUsername()),
-            "Чат для связи с администраторами!",
-            adminTalkChat,
-            null,
-            authorUser
-        );
+        String adminChatName = ChatNames.ADMINISTRATION_CHAT_NAME.formatted(author.getUser().getUsername());
+        addChatToUser(List.of(authorUser), adminChatName, "Чат для связи с администраторами!",
+            adminTalkChat, null, authorUser);
 
         chatUtilsService.addToNewsChat(authorUser.getId());
 
-        List<UserEntity> allAdmins = userService.findUsersWithRole(Authority.ADMIN.getAuthority());
-        for (UserEntity admin : allAdmins) {
-            chatMemberService.addMemberToChat(admin, adminChat);
-        }
-
         List<UserEntity> allManagers = userService.findUsersWithRole(Authority.MANAGER.getAuthority());
         for (UserEntity manager : allManagers) {
-            ArrayList<UserEntity> chatMembers = new ArrayList<>(allAdmins);
-            chatMembers.addAll(Arrays.asList(authorUser, manager));
-
-            addChatToUser(
-                chatMembers,
-                ChatNames.NEW_ORDER_CHAT_NAME.formatted(author.getUser().getUsername(), manager.getUsername()),
-                "Здесь будут появляться новые заказы.\nОжидайте, когда ваш менеджер вышлет вам новый заказ на рассмотрение.",
-                requestOrderChat,
-                manager,
-                authorUser
-            );
+            List<UserEntity> chatMembers = List.of(authorUser, manager);
+            String newOrderChatName = ChatNames.NEW_ORDER_CHAT_NAME.formatted(author.getUser().getUsername(), manager.getUsername());
+            addChatToUser(chatMembers, newOrderChatName, "Здесь будут появляться новые заказы.\nОжидайте, когда ваш менеджер вышлет вам новый заказ на рассмотрение.",
+                requestOrderChat, manager, authorUser);
         }
 
         author.setUser(authorUser);
         author.setCreatedByUser(cratedByUser);
 
         AuthorEntity save = authorRepository.save(author);
-
         authorDisciplineRepository.saveAll(save.getAuthorDisciplines());
 
         return save;
     }
 
     @Transactional
-    public ChatEntity addChatToUser(List<UserEntity> users, String chatName, String initMessage, ChatTypeEntity chatTypeEntity, UserEntity manager, UserEntity author) {
-        ChatEntity chat = chatService.createChat(users, chatName, null, initMessage, chatTypeEntity);
+    public void addChatToUser(List<UserEntity> users, String chatName, String initMessage, ChatTypeEntity chatTypeEntity, UserEntity manager, UserEntity author) {
+        List<ChatTagDto> chatTags = null;
 
-        if (manager != null || author != null) {
-            ChatMetadataEntity chatMetadataEntity = new ChatMetadataEntity();
-            chatMetadataEntity.setOwnerTypePermission(false);
-            chatMetadataEntity.setAuthorCanSubmitFiles(true);
-            chatMetadataEntity.setManager(manager);
-            chatMetadataEntity.setUser(author);
-            chatMetadataEntity.setChat(chat);
-            chatMetadataRepository.save(chatMetadataEntity);
+        if (chatTypeEntity.getType() == ChatType.REQUEST_ORDER_CHAT) {
+            chatTags = chatUtilsService.createNewOrderChatTags(manager, author);
         }
 
-        return chat;
+        if (chatTypeEntity.getType() == ChatType.ADMIN_TALK_CHAT) {
+            chatTags = chatUtilsService.createAdminChatTags(author);
+        }
+
+        ChatCreationDto build = ChatCreationDto.builder()
+            .chatName(chatName)
+            .members(users.stream().map(UserEntity::getId).collect(Collectors.toList()))
+            .chatType(chatTypeEntity.getType())
+            .tags(chatTags)
+            .metadata(ChatMetadataDto.builder()
+                .chatType(chatTypeEntity.getType())
+                .onlyOwnerCanType(false)
+                .authorCanSubmitFiles(true)
+                .managerId(Optional.ofNullable(manager).map(UserEntity::getId).orElse(null))
+                .authorId(Optional.ofNullable(author).map(UserEntity::getId).orElse(null))
+                .build())
+            .build();
+
+        chatCreatorService.createChatAsync(build, initMessage, true);
     }
 
     @Transactional
